data/derived/fa15/progs/unify/prog1812.ml.out
Characters 25-37:
  let _ = assoc([1,1],"a",[([1,2],"cc"),([1,1,1],"a")]);;
                           ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
